--- a/kaku-backend/dockerfile
+++ b/kaku-backend/dockerfile
@@ -1,13 +1,13 @@
 FROM ruby:3.1.2
 RUN apt-get update -qq && apt-get install -y vim
 
-RUN mkdir /myapp
-WORKDIR /myapp
+RUN mkdir /app
+WORKDIR /app
 
-COPY Gemfile /myapp/Gemfile
-COPY Gemfile.lock /myapp/Gemfile.lock
+COPY Gemfile /app/Gemfile
+COPY Gemfile.lock /app/Gemfile.lock
 RUN gem update --system
 RUN bundle update --bundler
 RUN bundle install
 
-COPY . /myapp
+COPY . /app
