add mysql docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,23 @@ services:
     networks:
       - default
 
+  mysql_db:
+    image: mysql:8.1.0
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: db_development
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    volumes:
+      - mysql_vloume:/var/lib/mysql
+    networks:
+      - default
+
+volumes:
+  mysql_vloume:
+
 networks:
   default:
     driver: bridge
