railsの起動確認のためNextコンテナの定義をコメントアウト

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,18 +13,18 @@ services:
     networks:
       - default
 
-  next:
-    build:
-      context: ./kaku-frontend
-    volumes:
-      - ./kaku-frontend:/app
-    ports:
-      - "8000:3000"
-      - "8001:3001"
-    tty: true
-    stdin_open: true
-    networks:
-      - default
+  # next:
+  #   build:
+  #     context: ./kaku-frontend
+  #   volumes:
+  #     - ./kaku-frontend:/app
+  #   ports:
+  #     - "8000:3000"
+  #     - "8001:3001"
+  #   tty: true
+  #   stdin_open: true
+  #   networks:
+  #     - default
 
   mysql_db:
     image: mysql:8.1.0
