pumaの設定ファイルと、databaseの接続設定を編集

--- a/kaku-backend/config/database.yml
+++ b/kaku-backend/config/database.yml
@@ -8,11 +8,11 @@ default: &default
 development:
   <<: *default
   host: mysql_db
-  database: mydatabase
+  database: db_development
   password: password
 
 test:
   <<: *default
   host: mysql_db
-  database: myapp_test
+  database: db_test
   password: password
