商品詳細画面の作成

--- a/kaku-frontend/.env.development
+++ b/kaku-frontend/.env.development
@@ -1,2 +1,2 @@
-RAILS_API_URL_CLIENT = http://localhost:3000/api
-RAILS_API_URL_SERVER = http://rails:3000/api
+NEXT_PUBLIC_RAILS_API_URL = http://localhost:3000/api
+NEXT_PRIVATE_RAILS_API_URL = http://rails:3000/api
