--- a/kaku-backend/Rakefile
+++ b/kaku-backend/Rakefile
@@ -5,8 +5,8 @@ require_relative 'config/application'
 
 Rails.application.load_tasks
 
-desc "Start development puma server"
-task :run_dev do
+desc 'Start development puma server'
+task run_dev: :environment do
   sh "bundle exec rails s -b '0.0.0.0'"
 end
 
