docerにRedisの設定を追加

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -6,6 +6,9 @@ tasks:
   comp_up:
     cmds:
       - docker compose up -d
+  comp_build:
+    cmds:
+      - docker compose build --no-cache
   comp_stop:
     cmds:
       - docker compose stop
