--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,8 +40,18 @@ services:
     networks:
       - default
 
+  redis:
+    image: redis:7.0.0
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_vloume:/data
+    networks:
+      - default
+
 volumes:
   mysql_vloume:
+  redis_vloume:
 
 networks:
   default:
