--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,17 @@ services:
     networks:
       - default
 
+  nginx:
+    build:
+      context: ./kaku-proxy
+    ports:
+      - "80:80"
+    tty: true
+    networks:
+      - default
+    volumes:
+      - ./kaku-proxy/nginx.conf:/etc/nginx/nginx.conf
+
 volumes:
   mysql_vloume:
   redis_vloume:
