グローバル変数を利用するためrubocopを修正

--- a/kaku-backend/.rubocop.yml
+++ b/kaku-backend/.rubocop.yml
@@ -106,6 +106,9 @@ Lint/RaiseException:
 Lint/StructNewOverride:
   Enabled: true
 
+Style/GlobalVars:
+  Enabled: false
+
 Style/AsciiComments:
   Enabled: false
 
