databaseとCORSの設定を定義

--- a/kaku-backend/config/database.yml
+++ b/kaku-backend/config/database.yml
@@ -5,6 +5,13 @@ default: &default
   username: root
   port: 3306
 
+production:
+  <<: *default
+  database: <%= ENV.fetch("DATABASE_NAME") %>
+  username: <%= ENV.fetch("DATABASE_USERNAME") %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") %>
+  host:  <%= ENV.fetch("DATABASE_HOST") %>
+
 development:
   <<: *default
   host: mysql_db
