--- a/kaku-backend/Rakefile
+++ b/kaku-backend/Rakefile
@@ -12,8 +12,8 @@ end
 
 desc 'First setup production puma server'
 task run_prod_first_setup: :environment do
-  puts 'run tail'
-  sh 'tail -f /dev/null'
+  puts 'run puma'
+  sh 'bundle exec puma -C config/puma.rb'
 end
 
 desc 'Start production puma server'
