--- a/kaku-backend/config/database.yml
+++ b/kaku-backend/config/database.yml
@@ -7,10 +7,10 @@ default: &default
 
 production:
   <<: *default
-  database: <%= ENV.fetch("DATABASE_NAME") %>
-  username: <%= ENV.fetch("DATABASE_USERNAME") %>
-  password: <%= ENV.fetch("DATABASE_PASSWORD") %>
-  host:  <%= ENV.fetch("DATABASE_HOST") %>
+  database: <%= ENV.fetch("DATABASE_NAME" ) {  } %>
+  username: <%= ENV.fetch("DATABASE_USERNAME"){  } %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD"){  } %>
+  host:  <%= ENV.fetch("DATABASE_HOST"){  } %>
 
 development:
   <<: *default
