--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,5 +49,5 @@ jobs:
           IMAGE_TAG: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_VERSION }}
         run: |
           docker build -t kaku-puma -f ./kaku-backend/Dockerfile.prod ./kaku-backend
-          docker tag kaku-puma ${{ env.IMAGE_TAG }}
+          docker tag kaku-puma:latest ${{ env.IMAGE_TAG }}
           docker push ${{ env.IMAGE_TAG }}
