--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,4 +50,5 @@ jobs:
         run: |
           docker build -t kaku-puma -f ./kaku-backend/Dockerfile.prod ./kaku-backend
           docker tag kaku-puma:latest ${{ env.IMAGE_TAG }}
-          docker push ${{ env.IMAGE_TAG }}
+          docker image ls
+          # docker push ${{ env.IMAGE_TAG }}
