--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,7 @@ jobs:
           IMAGE_TAG: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_VERSION }}
         run: |
           docker build -t kaku-puma -f ./kaku-backend/Dockerfile.prod ./kaku-backend
+          docker image ls
           docker tag kaku-puma:latest ${{ env.IMAGE_TAG }}
           docker image ls
           # docker push ${{ env.IMAGE_TAG }}
