--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,10 +50,6 @@ jobs:
         run: |
           docker build -t kaku-puma -f ./kaku-backend/Dockerfile.prod ./kaku-backend
           docker image ls
-          echo ${{ env.ECR_REGISTRY }}
-          echo ${{ env.ECR_REPOSITORY }}
-          echo ${{ env.IMAGE_TAG }}
-          echo ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_VERSION }}
-          docker tag kaku-puma:latest ${{ env.IMAGE_TAG }}
+          docker tag kaku-puma:latest ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_VERSION }}
           docker image ls
           # docker push ${{ env.IMAGE_TAG }}
