--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,40 +16,57 @@ jobs:
     name: Depploy to AWS ECS
     runs-on: ubuntu-latest
 
-    steps:
-      #AWS CLIのセットアップ
-      - name: setup aws cli
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          #Secretsに登録したAWSのアクセスキーIDとシークレットアクセスキーを取得
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          #上記で定義したリージョンの環境変数をセット
-          aws-region: ${{ env.AWS_REGION }}
+    # steps:
+    #   #AWS CLIのセットアップ
+    #   - name: setup aws cli
+    #     uses: aws-actions/configure-aws-credentials@v1
+    #     with:
+    #       #Secretsに登録したAWSのアクセスキーIDとシークレットアクセスキーを取得
+    #       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #       #上記で定義したリージョンの環境変数をセット
+    #       aws-region: ${{ env.AWS_REGION }}
 
-      #デプロイ先の環境によって環境変数を変更
-      #本来はdevelopブランチへのpushなども想定しているが、今回はmainブランチ(prod)のみ
-      - name: Set env var for prod
-        if: github.ref == 'refs/heads/main'
-        run: echo "ENV_NAME=prod" >> $GITHUB_ENV
+    #   #デプロイ先の環境によって環境変数を変更
+    #   #本来はdevelopブランチへのpushなども想定しているが、今回はmainブランチ(prod)のみ
+    #   - name: Set env var for prod
+    #     if: github.ref == 'refs/heads/main'
+    #     run: echo "ENV_NAME=prod" >> $GITHUB_ENV
 
-      - uses: actions/checkout@v2
+    #   - uses: actions/checkout@v2
       
-      #ECRへのログイン、認証情報はCLIの認証情報が自動で再利用される
-      - uses: aws-actions/amazon-ecr-login@v1
-        id: amazon-ecr-login
+    #   #ECRへのログイン、認証情報はCLIの認証情報が自動で再利用される
+    #   - uses: aws-actions/amazon-ecr-login@v1
+    #     id: amazon-ecr-login
     
-      - name: push puma image
-        env:
-          #ECRのリポジトリURLを環境変数にセット
-          ECR_REGISTRY: ${{ steps.amazon-ecr-login.outputs.registry }}
-          #ECRのリポジトリ名を環境変数にセット
-          ECR_REPOSITORY: kaku-puma
-          #ECRのリポジトリURLとタグを結合したものを環境変数にセット
-          IMAGE_TAG: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_VERSION }}
-        run: |
-          docker build -t kaku-puma -f ./kaku-backend/Dockerfile.prod ./kaku-backend
-          docker image ls
-          docker tag kaku-puma:latest ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_VERSION }}
-          docker image ls
-          docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_VERSION }}
+    #   - name: push puma image
+    #     env:
+    #       #ECRのリポジトリURLを環境変数にセット
+    #       ECR_REGISTRY: ${{ steps.amazon-ecr-login.outputs.registry }}
+    #       #ECRのリポジトリ名を環境変数にセット
+    #       ECR_REPOSITORY: kaku-puma
+    #     run: |
+    #       docker build -t kaku-puma -f ./kaku-backend/Dockerfile.prod ./kaku-backend
+    #       docker tag kaku-puma:latest ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_VERSION }}
+    #       docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_VERSION }}
+    defaults:
+      run:
+        working-directory: kaku-infrastructure
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.6.3
+
+    - name: Terraform Init
+      run: terraform init
+
+    - name: Terraform Apply
+      run: terraform apply -auto-approve
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
